--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -5,6 +5,90 @@
 <title>Our Menu</title>
 <lunk rel = "stylesheet" href="style.css">
 <style>
+
+/********** Base styles **********/
+h1 {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+p {
+  border: 1px solid black;
+  margin-bottom: 15px;
+}
+
+div {
+  border: 1px solid black;
+  width : 90%;
+  margin-right: 10px;
+  margin-left: auto;
+  margin-bottom: 15px;
+}
+#p1 {
+  background-color: Tomato;
+  text-align: center;
+  width: 60px;
+  height: 25px;
+  margin-top: 0px;
+  float : right;
+}
+#p2 {
+  background-color: Orange;
+  text-align: center;
+  width: 60px;
+  height: 25px;
+  margin-top: 0px;
+  float : right;
+}
+
+#p3 {
+  background-color: DodgerBlue;
+  text-align: center;
+  width: 60px;
+  height: 25px;
+  margin-top: 0px;
+  float : right;
+}
+
+.content1 {
+  clear : right
+}
+
+.content2 {
+  clear : right
+}
+
+.content3 {
+  clear : right
+}
+
+
+#s1 {
+  background-color: LightGrey;
+  padding :  0px 0px 5px 5px;
+  text-align: left;
+  width: 300px;
+  height: 200px;
+  float : left;
+}
+
+#s2 {
+  background-color: LightGrey;
+  padding : 0px 0px 5px 5px;
+  text-align: left;
+  width: 300px;
+  height: 200px;
+  float : left;
+}
+
+#s3 {
+  background-color: LightGrey;
+  padding : 0px 0px 5px 5px;
+  text-align: left;
+  width: 300px;
+  height: 200px;
+  float : left;
+}s
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
