--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Our Menu</title>
-<lunk rel = "stylesheet" href="style.css">
+<link rel = "stylesheet" href="style.css">
 <style>
 
 /********** Base styles **********/
