--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Our Menu</title>
 <link rel = "stylesheet" href="style.css">
 <style>
 
 /********** Base styles **********/
+
+* {
+  box-sizing: border-box;
+}
+
 h1 {
   margin-bottom: 15px;
   text-align: center;
@@ -14,86 +20,67 @@ h1 {
 
 p {
   border: 1px solid black;
-  margin-bottom: 15px;
 }
 
 div {
   border: 1px solid black;
-  width : 90%;
+  background-color: LightGrey;
+  width : 100%;
+  height : 200px;
   margin-right: 10px;
-  margin-left: auto;
+  margin-left: 10px;
   margin-bottom: 15px;
+}
+
+section {
+	clear :right;
 }
 #p1 {
   background-color: Tomato;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 #p2 {
   background-color: Orange;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 
 #p3 {
   background-color: DodgerBlue;
   text-align: center;
+  float : right;
   width: 60px;
   height: 25px;
-  margin-top: 0px;
-  float : right;
+  margin-top: 0;
 }
 
 .content1 {
-  clear : right
+  padding :  0px 0px 5px 5px;
+  text-align: left;
 }
 
 .content2 {
-  clear : right
+  padding : 0px 0px 5px 5px;
+  text-align: left;
 }
 
 .content3 {
-  clear : right
-}
-
-
-#s1 {
-  background-color: LightGrey;
-  padding :  0px 0px 5px 5px;
-  text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
-}
-
-#s2 {
-  background-color: LightGrey;
   padding : 0px 0px 5px 5px;
   text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
 }
 
-#s3 {
-  background-color: LightGrey;
-  padding : 0px 0px 5px 5px;
-  text-align: left;
-  width: 300px;
-  height: 200px;
-  float : left;
-}s
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -137,111 +124,110 @@ div {
 
 /********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
- .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+ .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
   }
-  .col-lg-1 {
+  .col-md-1 {
     width: 8.33%;
   }
-  .col-lg-2 {
+  .col-md-2 {
     width: 16.66%;
   }
-  .col-lg-3 {
+  .col-md-3 {
     width: 25%;
   }
-  .col-lg-4 {
+  .col-md-4 {
     width: 33.33%;
   }
-  .col-lg-5 {
+  .col-md-5 {
     width: 41.66%;
   }
-  .col-lg-6 {
+  .col-md-6 {
     width: 50%;
   }
-  .col-lg-7 {
+  .col-md-7 {
     width: 58.33%;
   }
-  .col-lg-8 {
+  .col-md-8 {
     width: 66.66%;
   }
-  .col-lg-9 {
+  .col-md-9 {
     width: 74.99%;
   }
-  .col-lg-10 {
+  .col-md-10 {
     width: 83.33%;
   }
-  .col-lg-11 {
+  .col-md-11 {
     width: 91.66%;
   }
-  .col-lg-12 {
+  .col-md-12 {
     width: 100%;
   }
 }
 
+/********** small devices only **********/
 @media (max-width: 767px) {
- .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+ .col-sl-1, .col-sl-2, .col-sl-3, .col-sl-4, .col-sl-5, .col-sl-6, .col-sl-7, .col-sl-8, .col-sl-9, .col-sl-10, .col-sl-11, .col-sl-12 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
   }
-  .col-lg-1 {
+  .col-sl-1 {
     width: 8.33%;
   }
-  .col-lg-2 {
+  .col-sl-2 {
     width: 16.66%;
   }
-  .col-lg-3 {
+  .col-sl-3 {
     width: 25%;
   }
-  .col-lg-4 {
+  .col-sl-4 {
     width: 33.33%;
   }
-  .col-lg-5 {
+  .col-sl-5 {
     width: 41.66%;
   }
-  .col-lg-6 {
+  .col-sl-6 {
     width: 50%;
   }
-  .col-lg-7 {
+  .col-sl-7 {
     width: 58.33%;
   }
-  .col-lg-8 {
+  .col-sl-8 {
     width: 66.66%;
   }
-  .col-lg-9 {
+  .col-sl-9 {
     width: 74.99%;
   }
-  .col-lg-10 {
+  .col-sl-10 {
     width: 83.33%;
   }
-  .col-lg-11 {
+  .col-sl-11 {
     width: 91.66%;
   }
-  .col-lg-12 {
+  .col-sl-12 {
     width: 100%;
   }
 }
-
 
 </style> 
 </head>
 <body>
 <h1>Our Menus</h1>
+	<div class = "col-lg-4 col-md-6 col-sl-12">
+		<p id="p1"> Chicken </p>
+		<section class = "content1"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+	</div>
 
-<div id = "s1" , class = "col-lg-4 col-lg-6 col-lg-12">
-	<p id="p1"> Chicken </p>
-	<section class = "content1"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
-</div>
+	<div class = "col-lg-4 col-md-6 col-sl-12">
+		<p id="p2"> Beef </p>
+		<section class = "content2"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+	</div>
 
-<div id = "s2" , class = "col-lg-4 col-lg-6 col-lg-12">
-	<p id="p2"> Beef </p>
-	<section class = "content2"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
-</div>
-
-<div id = "s3" , class = "col-lg-4 col-lg-6 col-lg-12">
-	<p id="p3"> Sushi</p>
-	<section class = "content3"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
-</div>
+	<div class = "col-lg-4 col-md-6 col-sl-12">
+		<p id="p3"> Sushi</p>
+		<section class = "content3"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+	</div>
 
 
 
