--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -25,15 +25,13 @@ p {
 div {
   border: 1px solid black;
   background-color: LightGrey;
-  width : 100%;
-  height : 200px;
-  margin-right: 10px;
-  margin-left: 10px;
   margin-bottom: 15px;
 }
 
 section {
-	clear :right;
+  width : 100%;
+  height : 200px;
+  clear :right;
 }
 #p1 {
   background-color: Tomato;
@@ -61,17 +59,17 @@ section {
   margin-top: 0;
 }
 
-.content1 {
+#content1 {
   padding :  0px 0px 5px 5px;
   text-align: left;
 }
 
-.content2 {
+#content2 {
   padding : 0px 0px 5px 5px;
   text-align: left;
 }
 
-.content3 {
+#content3 {
   padding : 0px 0px 5px 5px;
   text-align: left;
 }
@@ -214,22 +212,22 @@ section {
 </head>
 <body>
 <h1>Our Menus</h1>
+<div>
 	<div class = "col-lg-4 col-md-6 col-sl-12">
 		<p id="p1"> Chicken </p>
-		<section class = "content1"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+		<section id = "content1"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
 	</div>
 
 	<div class = "col-lg-4 col-md-6 col-sl-12">
 		<p id="p2"> Beef </p>
-		<section class = "content2"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+		<section id = "content2"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
 	</div>
 
 	<div class = "col-lg-4 col-md-6 col-sl-12">
 		<p id="p3"> Sushi</p>
-		<section class = "content3"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
+		<section id = "content3"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequat </section>
 	</div>
-
-
+</div>
 
 </body>
 </html>
