--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -32,15 +32,15 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
+            <li class = "text-center">
               <a href = "#block1" class = "hide-the-text"> 
                 <br class="hidden-xs"> Chicken </a>
             </li>
-            <li>
+            <li class = "text-center">
               <a href = "#block2" class = "hide-the-text"> 
                 <br class="hidden-xs"> Beef </a>
             </li>
-            <li>
+            <li class = "text-center">
               <a href = "#block3" class = "hide-the-text">
                 <br class="hidden-xs"> Sushi </a>
             </li>
@@ -49,7 +49,7 @@
       </div> <!--#header-navbar-->
     </nav>
     </header>
-      <h2> Our menu </h2>
+      <h2 class="text-center"> Our menu </h2>
      <div id = "block1"> 
       <p id = "p1"> Chicken </p>
       <section id = "content1"> lorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, quis nostrud exerctitation ullamco laboris nisi ut aliquip ex ea commodo consequatlorem ipsun dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore nagna aliqua. Ut enim ad minim veniam, 
